owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_basic_bin_op-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"a + b\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Identifier(
                "a",
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        rhs: Expr {
            kind: Identifier(
                "b",
            ),
            span: Span {
                lo: BytePos(
                    4,
                ),
                hi: BytePos(
                    5,
                ),
            },
        },
        op_type: OpPlus,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            5,
        ),
    },
}
