owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_basic_bin_op.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"1 + 1\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    2,
                ),
            },
        },
        rhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    4,
                ),
                hi: BytePos(
                    5,
                ),
            },
        },
        op_type: OpPlus,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            5,
        ),
    },
}
