owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_func_definition-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_unit(\"fn test() {\n            return 1 + 1;\n        }\")"
---
CompilationUnit {
    entry_file_name: "<test>",
    functions: [
        Stmt {
            kind: Fn {
                proto: FnProto {
                    args: [],
                    iden: "test",
                },
                body: Some(
                    Block {
                        stmts: [
                            Stmt {
                                kind: Return {
                                    value: Expr {
                                        kind: BinaryExpr {
                                            lhs: Expr {
                                                kind: Literal(
                                                    1,
                                                ),
                                            },
                                            rhs: Expr {
                                                kind: Literal(
                                                    1,
                                                ),
                                            },
                                            op_type: OpPlus,
                                        },
                                    },
                                },
                            },
                        ],
                    },
                ),
            },
        },
    ],
}
