owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_function_call.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"my_function()\")"
---
Expr {
    kind: FuncCall {
        callee: "my_function",
        args: [],
    },
}
