owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_let_statement.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_stmt(\"let x = 1;\")"
---
Stmt {
    kind: Let {
        iden: "x",
        initializer: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    8,
                ),
                hi: BytePos(
                    9,
                ),
            },
        },
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            9,
        ),
    },
}
