owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_operator_precedence-10.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"foo <= 1\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Identifier(
                "foo",
            ),
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    4,
                ),
            },
        },
        rhs: Expr {
            kind: Literal(
                1,
            ),
            span: Span {
                lo: BytePos(
                    7,
                ),
                hi: BytePos(
                    8,
                ),
            },
        },
        op_type: OpEqualsLessThan,
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            8,
        ),
    },
}
