owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_operator_precedence-11.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"foo >= 1\")"
---
Expr {
    kind: BinaryExpr {
        lhs: Expr {
            kind: Identifier(
                "foo",
            ),
        },
        rhs: Expr {
            kind: Literal(
                1,
            ),
        },
        op_type: OpEqualsGreaterThan,
    },
}
